8025564: gc/memory/UniThread/Linear1 times out during heap verification

Reviewed-by: stefank, tschatzl